src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/CD4AC3008.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram CD4AC3008 {

	enum A;
	enum B {
		;
	}
	enum C {
		ENTRY, ENTRY2;
	}
}